// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package openpitrix.iam.am;

option go_package = "openpitrix.io/iam/pkg/pb/am;pbam";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

// ----------------------------------------------------------------------------
// service api
// ----------------------------------------------------------------------------

service AccessManager {
	rpc GetVersion(Empty) returns (String) {
		option (google.api.http) = {
			get: "/v1/am/version"
		};
	}

	rpc DescribeActions(Empty) returns (ActionList) {
		option (google.api.http) = {
			get: "/v1/am/actions"
		};
	}

	rpc CanDo(CanDoActionRequest) returns (CanDoActionResponse) {
		option (google.api.http) = {
			post: "/v1/am/cando"
			body: "*"
		};
	}

	rpc CreateRole(CreateRoleRequest) returns (CreateRoleResponse) {
		option (google.api.http) = {
			post: "/v1/am/roles"
			body: "*"
		};
	}
	rpc DeleteRoles(DeleteRolesRequest) returns (DeleteRolesResponse) {
		option (google.api.http) = {
			delete: "/v1/am/roles"
			body: "*"
		};
	}
	rpc ModifyRole(ModifyRoleRequest) returns (ModifyRoleResponse) {
		option (google.api.http) = {
			patch: "/v1/am/roles"
			body: "*"
		};
	}
	rpc DescribeRoles(Empty) returns (RoleList) {
		option (google.api.http) = {
			get: "/v1/am/roles"
		};
	}
	rpc DescribeRolesVerbose(Empty) returns (RoleExList) {
		option (google.api.http) = {
			get: "/v1/am/roles:verbose"
		};
	}

	rpc BindRoleActions(BindRoleActionsRequest) returns (BindRoleActionsResponse) {
		option (google.api.http) = {
			post: "/v1/am/role:actions"
			body: "*"
		};
	}
	rpc UnBindRoleActions(UnBindRoleActionsRequest) returns (UnBindRoleActionsResponse) {
		option (google.api.http) = {
			delete: "/v1/am/role:actions"
			body: "*"
		};
	}

	rpc BindUserRole(BindUserRoleRequest) returns (BindUserRoleResponse) {
		option (google.api.http) = {
			post: "/v1/am/user:role"
			body: "*"
		};
	}
	rpc UnBindUserRole(UnBindUserRoleRequest) returns (UnBindUserRoleResponse) {
		option (google.api.http) = {
			delete: "/v1/am/user:role"
			body: "*"
		};
	}
}

// ----------------------------------------------------------------------------
// common types
// ----------------------------------------------------------------------------

message Empty {
	//
}

message String {
	string value = 1;
}

// ----------------------------------------------------------------------------
// Action
// ----------------------------------------------------------------------------

message Action {
	string action_id = 1;
	string action_name = 2;
	string method = 3;
	string description = 4;
	string feature_id = 5;
	string feature_name = 6;
	string module_id = 7;
	string module_name = 8;
}

message ActionList {
	repeated Action value = 1;
}

// ----------------------------------------------------------------------------
// CanDoAction
// ----------------------------------------------------------------------------

message CanDoActionRequest {
	string user_id = 1;
	string http_method = 2;
	string request_path = 3;
}
message CanDoActionResponse {
	string user_id = 1;
	string access_path = 2;
	string owner_path = 3;
}

// ----------------------------------------------------------------------------
// Role
// ----------------------------------------------------------------------------

message Role {
	string role_id = 1;
	string role_name = 2;
	string description = 3;
	string portal = 4;
	string owner = 5;
	string owner_path = 6;

	google.protobuf.Timestamp create_time = 7;
	google.protobuf.Timestamp update_time = 8;
}
message RoleList {
	repeated Role value = 1;
}

message Module {
	repeated Feature feature = 1;
}
message Feature {
	repeated Action action = 1;
}

message RoleEx {
	Role value = 1;
	repeated Module module = 2;
}
message RoleExList {
	repeated RoleEx value = 1;
}

message CreateRoleRequest {
	string user_id = 1;
	Role value = 2;
}
message CreateRoleResponse {
	string user_id = 1;
	string role_id = 2;
}

message DeleteRolesRequest {
	string user_id = 1;
	repeated string role_id = 2;
}
message DeleteRolesResponse {
	repeated string role_id = 2;
}

message ModifyRoleRequest {
	string user_id = 1;
	Role value = 2;
}
message ModifyRoleResponse {
	string role_id = 2;
}

// ----------------------------------------------------------------------------
// Binding
// ----------------------------------------------------------------------------

message RoleModuleBinding {
	string binding_id = 1;
	string role_id = 2;
	string module_id = 3;
	string data_level = 4;
	string enabled_actions = 5; // 001:createapp, 002:modifyapp
	string owner = 8;

	google.protobuf.Timestamp create_time = 6;
	google.protobuf.Timestamp update_time = 7;
}

message BindRoleActionsRequest {
	string role_id = 1;
	repeated string action_id = 2;
}
message BindRoleActionsResponse {
	//
}

message UnBindRoleActionsRequest {
	string role_id = 1;
	repeated string action_id = 2;
}
message UnBindRoleActionsResponse {
	//
}

message BindUserRoleRequest {
	repeated string user_id = 1;
	repeated string role_id = 2;
}
message BindUserRoleResponse {
	//
}

message UnBindUserRoleRequest {
	repeated string user_id = 1;
	repeated string role_id = 2;
}
message UnBindUserRoleResponse {
	//
}

// ----------------------------------------------------------------------------
// END
// ----------------------------------------------------------------------------
